test/expected/show_using-c++03.out
show using
     ^
6: error: "using" not supported until C++11
